<resources>
    <string name="app_name">Fegusta RecyclerView</string>
    <string name="nome_do_jogo">Nome do jogo</string>
    <string name="produtora_do_jogo">Produtora do jogo</string>
    <string name="console">Console:</string>
    <string name="nota_do_jogo">Nota do jogo</string>
    <string name="zerado">Zerado</string>
    <string name="msg_valida_cadastro_titulo_jogo">Título do jogo é obrigatório</string>
    <string name="msg_valida_cadastroJogo_form_produtora_jogo">Produtora do jogo é obrigatório!</string>

    <string-array name="consoles">
        <item>Super Nintendo</item>
        <item>Mega Drive</item>
        <item>Sega Saturn</item>
        <item>Atari Jaguar</item>
        <item>PlayStation 4</item>
        <item>Xbox - One</item>
        <item>PC</item>
    </string-array>
</resources>